getting all data perfectly

--- a/MAD_prj/app/src/main/res/layout/activity_reports_insights.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_reports_insights.xml
@@ -249,6 +249,13 @@
                     android:textColor="#000000"
                     android:layout_marginBottom="8dp" />
 
+                <EditText
+                    android:id="@+id/que"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Ask anything"
+                    />
+
                 <Button
                     android:id="@+id/btn_generate_ai_report"
                     android:layout_width="match_parent"
