added intents final done

--- a/MAD_prj/app/src/main/res/layout/activity_signup.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_signup.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="@drawable/bg_gradient"
-    tools:context=".SignupActivity">
+    tools:context=".SignupActivity"
+    android:fitsSystemWindows="true"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
