--- a/MAD_prj/app/src/main/res/layout/activity_reports_insights.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_reports_insights.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F9FB"
-    tools:context=".ReportsInsightsActivity">
+    tools:context=".ReportsInsightsActivity"
+    android:fitsSystemWindows="true"
+    >
 
     <!-- Bottom Navbar -->
     <LinearLayout
