--- a/MAD_prj/app/src/main/res/layout/activity_water_tracker.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_water_tracker.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F8FD"
-    tools:context=".WaterTrackerActivity">
+    tools:context=".WaterTrackerActivity"
+    android:fitsSystemWindows="true"
+    >
 
     <!-- Scrollable content -->
     <ScrollView
